# invoice-reader-app

./: .cz.toml  .env.template  .gitignore  CHANGELOG.md  Makefile  NOTES.md  README.md  RELEASING.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  hello.py  pyproject.toml  pytest.ini
infra/: data.tf  (+1 more)
ml-dev/parser/: Dockerfile  Makefile  README.md  cloudbuild.yaml  docker-compose.yml  pyproject.toml
ml-dev/parser/label_studio/: parser_benchmark.xml
ml-dev/parser/scripts/: 0_extract_pictures_from_dataset.py  1_convert_pdf_to_image.sh
ml-dev/parser/src/parser/: settings.py
ml-dev/parser/src/parser/domain/: annotation.py  metrics.py  parse.py  prediction.py
ml-dev/parser/src/parser/infrastructure/: annotation.py  document.py  evaluator.py  parser.py  storage.py
ml-dev/parser/src/parser/infrastructure/schemas/: label_studio.py  parser.py  prediction.py  storage.py
ml-dev/parser/src/parser/interface/: dependencies.py
ml-dev/parser/src/parser/interface/cli/: __init__.py  annotation.py  evaluate.py  label_studio.py
ml-dev/parser/src/parser/service/: annotation.py  evaluate.py  label_studio.py
ml-dev/parser/src/parser/service/ports/: annotation.py  document.py  evaluator.py  parser.py  storage.py
ml-dev/parser/tests/data/: benchmark_sample.parquet  label_studio_json_min_export.json
ml-dev/parser/tests/integration/: test_annotation.py  test_evaluation.py
ml-dev/parser/tests/unittests/: test_annotator.py  test_evaluator.py
ml-server/: .env.template  .gitignore  Dockerfile  README.md  pyproject.toml
ml-server/src/ml_server/: settings.py
ml-server/src/ml_server/application/: exceptions.py
ml-server/src/ml_server/application/parser/: interfaces.py  service.py
ml-server/src/ml_server/domain/: insight.py  invoice.py  parser.py  prediction.py  repository.py
ml-server/src/ml_server/infrastructure/: parser.py
ml-server/src/ml_server/infrastructure/models/: parser.py
ml-server/src/ml_server/infrastructure/repositories/: prediction.py
ml-server/src/ml_server/infrastructure/schemas/: parser.py
ml-server/src/ml_server/interfaces/: api.py
ml-server/src/ml_server/interfaces/api/: model_serving.py
ml-server/src/ml_server/interfaces/dependencies/: parser.py
ml-server/src/ml_server/interfaces/schemas/: parser.py
ml-server/src/ml_server/services/: exceptions.py  parser.py
ml-server/src/ml_server/services/ports/: parser.py
ml-server/src/ml_server/services/predictions/: service.py
ml-server/src/ml_server/utils/: logger.py
ml-server/tests/: test_prediction_crud.py
ml-server/tests/units/: test_parser.py
ml-server/tests/units/domain/: test_invoice.py
ml-server/tests/units/infrastructure/: test_parser.py
server/: .dockerignore  .env.template  .gitignore  Dockerfile  entrypoint.sh  pyproject.toml  pytest.ini  todo.md
server/docker/: entrypoint.sh
server/migrations/: env.py
server/migrations/versions/: 0509cf07780e_change_street_number_to_string.py  143409f9beb3_ddd_server_refactor.py  373d96d7f878_initial_migration.py  52a7478747a7_add_currencies.py  7749c74b2982_add_gross_amount_in_various_currencies.py  78c66a9f91d5_add_czk_currency.py  9ef3fa9f1cc8_database_creation.py  a2b3013b84b4_update_invoice.py  e114c4de9829_update_invoice_description.py
server/src/invoice_reader/: db.py  models.py  presenter.py  repository.py  settings.py
server/src/invoice_reader/app/: auth.py  exceptions.py  main.py  middlewares.py  routes.py
server/src/invoice_reader/app/routes/: clients.py  invoices.py  others.py  users.py
server/src/invoice_reader/core/: extract.py  extraction.py  stats.py  storage.py
server/src/invoice_reader/domain/: __init__.py  auth.py  client.py  clients.py  exceptions.py  exchange_rate.py  invoice.py  invoices.py  parser.py  user.py  users.py
server/src/invoice_reader/infrastructure/: exchange_rates.py  parser.py  storage.py  togetherai.py
server/src/invoice_reader/infrastructure/models/: __init__.py  client.py  invoice.py  user.py
server/src/invoice_reader/infrastructure/repositories/: __init__.py  client.py  exchange_rate.py  file.py  invoice.py  user.py
server/src/invoice_reader/infrastructure/schemas/: parser.py
server/src/invoice_reader/interfaces/api/: main.py
server/src/invoice_reader/interfaces/dependencies/: auth.py  exchange_rates.py  exchange_rates_service.py  infrastructure.py  parser.py  repository.py
server/src/invoice_reader/interfaces/schemas/: __init__.py  analytics.py  auth.py  client.py  invoice.py  parser.py  user.py
server/src/invoice_reader/mappers/: __init__.py  clients.py  invoices.py  parser.py  users.py
server/src/invoice_reader/migration/: 0_create_tables.py
server/src/invoice_reader/schemas/: __init__.py  client_schema.py  clients.py  invoice_schema.py  invoices.py  parser.py  user_schema.py
server/src/invoice_reader/services/: analytics.py  auth.py  client.py  exceptions.py  exchange_rates.py  invoice.py  user.py
server/src/invoice_reader/services/interfaces/: __init__.py  client_repository.py  exchange_rates.py  file_repository.py  invoice_repository.py  parser.py  user_repository.py
server/src/invoice_reader/utils/: files.py  logger.py
server/tests/: conftest.py
server/tests/fixtures/: db.py  factory.py
server/tests/fixtures/domain/: client.py  clients.py  invoice.py  invoices.py  user.py  users.py
server/tests/fixtures/entities/: client.py  clients.py  currencies.py  exchange_rate.py  invoice.py  invoices.py  user.py  users.py
server/tests/integration/: utils.py
server/tests/integration/routes/: test_auth.py  test_clients.py  test_invoices.py  test_users.py
server/tests/integrations/: test_client_router.py  test_invoice_router.py  test_user_router.py
server/tests/integrations/routers/: test_invoice_router.py
server/tests/units/: test_rollback.py  test_s3.py
server/tests/units/adapters/: test_parser.py
server/tests/units/adapters/repositories/: test_client_repository.py  test_file_repository.py  test_invoice_repository.py  test_user_repository.py
server/tests/units/domain/: test_client.py  test_invoice.py
ui/: README.md  (+6 more)
(+189 files in other folders)
