[project]
name = "ml-server"
version = "0.1.0"
description = "Invoice Manager ML Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pillow>=11.3.0",
    "openai>=1.97.1",
    "fastapi[standard]>=0.116.1",
    "loguru>=0.7.3",
    "pdf2image>=1.17.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "huggingface-hub[cli]>=0.33.2",
    "ipykernel>=6.29.5",
]

[tool.ty.rules]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff]
line-length = 100